--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^8.0.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-google-login": "^5.0.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
